--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-tailwind-starter",
+  "name": "atysa-shop-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.10",
+    "@badrap/bar-of-progress": "^0.2.1",
+    "@headlessui/react": "^1.7.2",
+    "@heroicons/react": "^2.0.11",
+    "everify": "^0.0.8",
+    "mongodb": "^4.10.0",
     "next": "12.3",
+    "next-auth": "^4.12.2",
+    "next-connect": "^0.13.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
+    "@types/react": "18.0.21",
     "autoprefixer": "^10.3.1",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
     "postcss": "^8.3.5",
+    "prettier": "2.7.1",
     "tailwindcss": "^3.0.23"
   }
 }
