--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@badrap/bar-of-progress": "^0.2.1",
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
+    "@next-auth/mongodb-adapter": "^1.1.0",
     "everify": "^0.0.8",
     "mongodb": "^4.10.0",
     "next": "12.3",
     "next-auth": "^4.12.2",
     "next-connect": "^0.13.0",
+    "nodemailer": "^6.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
