--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next-connect": "^0.13.0",
     "nodemailer": "^6.8.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "smooth-scrollbar-react": "^2.3.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
