--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nodemailer": "^6.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "smooth-scrollbar-react": "^2.3.0"
+    "smooth-scrollbar-react": "^2.3.0",
+    "use-http": "^1.0.27"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
