auth fixed with next-auth

--- a/.env
+++ b/.env
@@ -1,1 +1,13 @@
-MONGODB_URI=
+NEXTAUTH_SECRET=as4d6asd
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+MONGODB_URI=mongodb://127.0.0.1:27017/atysa-shop-nextjs-db
+MONGODB_DB=atysa-shop-nextjs-db
+GITHUB_ID=047635cc3931d5238a41
+GITHUB_SECRET=f9487271ec68b11ce38d7ef4149cdf498395e268
+EMAIL_SERVER=smtp://server@atysa.ir:zsrkmPTBPy@smtp.atysa.ir:587
+EMAIL_FROM=server@atysa.ir
+NODE_TLS_REJECT_UNAUTHORIZED=0
+COOKIE_PASSWORD=CNhpDjNAMGMemjv1tsgNnaebywVRDptQ
+SMS_USER_API_KEY=9b4a9c1754112d1083b49c17
+SMS_SECRET_KEY=thisismyapikey
