--- a/package.json
+++ b/package.json
@@ -12,17 +12,15 @@
     "@badrap/bar-of-progress": "^0.2.1",
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
-    "@next-auth/mongodb-adapter": "^1.1.0",
     "iron-session": "latest",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.10.0",
     "next": "12.3",
-    "next-auth": "^4.12.2",
+    "next-auth": "latest",
     "next-connect": "^0.13.0",
-    "nodemailer": "^6.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "smooth-scrollbar-react": "^2.3.0",
-    "use-http": "^1.0.27"
+    "smooth-scrollbar-react": "^2.3.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
