--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
     "mongodb": "^4.10.0",
-    "next": "12.3",
+    "next": "12.3.1",
     "next-auth": "latest",
     "next-connect": "^0.13.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "smooth-scrollbar-react": "^2.3.0"
   },
   "devDependencies": {
