--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
     "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "smooth-scrollbar-react": "^2.3.0"
+    "smooth-scrollbar-react": "^2.3.0",
+    "tailwindcss-container-query": "^1.1.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
-    "@types/react": "18.0.21",
+    "@types/node": "^18.8.5",
+    "@types/react": "^18.0.21",
     "autoprefixer": "^10.3.1",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
     "postcss": "^8.3.5",
     "prettier": "2.7.1",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.8.4"
   }
 }
