--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "smooth-scrollbar-react": "^2.3.0",
+    "smooth-scrollbar": "^8.8.1",
     "tailwindcss-container-query": "^1.1.0"
   },
   "devDependencies": {
@@ -30,6 +30,7 @@
     "eslint-config-next": "11.0.1",
     "postcss": "^8.3.5",
     "prettier": "2.7.1",
+    "tailwind-scrollbar": "^2.1.0-preview.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.8.4"
   }
