--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "@badrap/bar-of-progress": "^0.2.1",
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
+    "@prisma/client": "^4.5.0",
+    "@tanstack/react-query": "^4.12.0",
+    "@tanstack/react-query-devtools": "^4.13.0",
+    "framer-motion": "^7.6.1",
+    "match-sorter": "^6.3.1",
     "mongodb": "^4.10.0",
-    "next": "12.3.1",
+    "namor": "^2.0.4",
+    "next": "^12.3.0",
     "next-auth": "latest",
     "next-connect": "^0.13.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-table": "^7.8.0",
     "smooth-scrollbar": "^8.8.1",
     "tailwindcss-container-query": "^1.1.0"
   },
@@ -25,13 +32,14 @@
     "@tailwindcss/typography": "^0.5.2",
     "@types/node": "^18.8.5",
     "@types/react": "^18.0.21",
-    "autoprefixer": "^10.3.1",
+    "autoprefixer": "^10.4.12",
     "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1",
-    "postcss": "^8.3.5",
+    "eslint-config-next": "^13.0.0",
+    "postcss": "^8.4.18",
     "prettier": "2.7.1",
+    "prisma": "^4.5.0",
     "tailwind-scrollbar": "^2.1.0-preview.0",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.2.1",
     "typescript": "^4.8.4"
   }
 }
