product and category featuer admin updated to more optmstic

--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@prisma/client": "^4.5.0",
     "@tanstack/react-query": "^4.12.0",
     "@tanstack/react-query-devtools": "^4.13.0",
+    "apollo-server-micro": "^3.10.4",
     "framer-motion": "^7.6.1",
+    "graphql": "^16.6.0",
     "match-sorter": "^6.3.1",
+    "micro-cors": "^0.1.1",
     "mongodb": "^4.10.0",
     "namor": "^2.0.4",
     "next": "^12.3.0",
     "next-auth": "latest",
     "next-connect": "^0.13.0",
+    "nexus": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-table": "^7.8.0",
