graphql removed and admin imporved and category list item ui improved and search bar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,11 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/ui/modals/index.jsx"
+  ],
   "exclude": ["node_modules"]
 }
