--- a/package.json
+++ b/package.json
@@ -16,19 +16,24 @@
     "@tanstack/react-query": "^4.12.0",
     "@tanstack/react-query-devtools": "^4.13.0",
     "apollo-server-micro": "^3.10.4",
+    "axios": "^1.1.3",
+    "formidable": "^2.0.1",
     "framer-motion": "^7.6.1",
     "graphql": "^16.6.0",
     "match-sorter": "^6.3.1",
     "micro-cors": "^0.1.1",
     "mongodb": "^4.10.0",
+    "multer": "^1.4.5-lts.1",
     "namor": "^2.0.4",
     "next": "^12.3.0",
     "next-auth": "latest",
     "next-connect": "^0.13.0",
     "nexus": "^1.3.0",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-table": "^7.8.0",
+    "sass": "^1.56.0",
     "smooth-scrollbar": "^8.8.1",
     "tailwindcss-container-query": "^1.1.0"
   },
