gallery upload complete

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,11 +25,6 @@
       }
     ]
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "src/ui/modals/index.jsx"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/lib/parse-form.ts"],
   "exclude": ["node_modules"]
 }
