--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@tanstack/react-query-devtools": "^4.13.0",
     "apollo-server-micro": "^3.10.4",
     "axios": "^1.1.3",
+    "date-fns": "^2.29.3",
     "formidable": "^2.0.1",
     "framer-motion": "^7.6.1",
     "graphql": "^16.6.0",
     "match-sorter": "^6.3.1",
     "micro-cors": "^0.1.1",
+    "mime": "^3.0.0",
     "mongodb": "^4.10.0",
     "multer": "^1.4.5-lts.1",
     "namor": "^2.0.4",
@@ -38,6 +40,7 @@
     "tailwindcss-container-query": "^1.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.2",
     "@types/node": "^18.8.5",
     "@types/react": "^18.0.21",
