gallery extracted and refactoring still

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NEXTAUTH_SECRET=as4d6asd
-BASE_URL=http://localhost:3000
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_URL_INTERNAL=http://localhost:3000
+BASE_URL=http://192.168.1.188:3000
+NEXTAUTH_URL=http://192.168.1.188:3000/
+NEXTAUTH_URL_INTERNAL=http://192.168.1.188:3000/
 MONGODB_URI=mongodb://127.0.0.1:27017/atysa-shop-nextjs-db
 
 
