--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,12 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/lib/parse-form.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/lib/parse-form.ts",
+    "src/ui/forms/multi-box/index.jsx"
+  ],
   "exclude": ["node_modules"]
 }
