--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NEXTAUTH_SECRET=as4d6asd
-BASE_URL=http://192.168.1.188:3000
-NEXTAUTH_URL=http://192.168.1.188:3000/
-NEXTAUTH_URL_INTERNAL=http://192.168.1.188:3000/
+BASE_URL=http://localhost:3000
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
 MONGODB_URI=mongodb://127.0.0.1:27017/atysa-shop-nextjs-db
 
 
@@ -15,7 +15,7 @@ COOKIE_PASSWORD=CNhpDjNAMGMemjv1tsgNnaebywVRDptQ
 SMS_USER_API_KEY=9b4a9c1754112d1083b49c17
 SMS_SECRET_KEY=thisismyapikey
 
-
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
