category bg-blue-50 changed to bg-atysa-secondry

--- a/.env
+++ b/.env
@@ -24,6 +24,6 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3000
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-#DATABASE_URL="mongodb://127.0.0.1:27017/atysashop"
-DATABASE_URL="mongodb+srv://phonix:node1234@cluster0-ttp8q.mongodb.net/atysashop?retryWrites=true&w=majority"
+DATABASE_URL="mongodb://127.0.0.1:27017/atysa-shop"
+#DATABASE_URL="mongodb+srv://phonix:node1234@cluster0-ttp8q.mongodb.net/atysashop?retryWrites=true&w=majority"
 #DATABASE_URL="mongodb://localhost:27021,localhost:27022,localhost:27023/atysashop?replicaSet=dbrs&atysashop?retryWrites=true&w=majority"
