nooby upload fixed

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ SMS_USER_API_KEY=9b4a9c1754112d1083b49c17
 SMS_SECRET_KEY=thisismyapikey
 
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
-
+NEXT_IMAGE_ALLOWED_DOMAINS=http://localhost:3000
 UPLOAD_DIR=uploads
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
@@ -25,6 +25,6 @@ UPLOAD_DIR=uploads
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb://127.0.0.1:27017/atysa-shop"
-#DATABASE_URL="mongodb+srv://phonix:node1234@cluster0-ttp8q.mongodb.net/atysashop?retryWrites=true&w=majority"
+#DATABASE_URL="mongodb://127.0.0.1:27017/atysa-shop"
+DATABASE_URL="mongodb+srv://phonix:node1234@cluster0-ttp8q.mongodb.net/atysashop?retryWrites=true&w=majority"
 #DATABASE_URL="mongodb://localhost:27021,localhost:27022,localhost:27023/atysashop?replicaSet=dbrs&atysashop?retryWrites=true&w=majority"
