--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,12 @@
     "baseUrl": "./src",
     "paths": {
       "@/*": ["/*"],
+      "@/ui/*": ["/ui/*"],
       "@/api/*": ["/pages/api/*"]
-    }
+    },
+    "module": "ES6",
+    "jsx": "preserve",
+    "checkJs": true,
+    "exclude": ["node_modules", "**/node_modules/*"]
   }
 }
