--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/data/index.js"],
   "exclude": ["node_modules"]
 }
