--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "mongodb": "^4.10.0",
     "multer": "^1.4.5-lts.1",
     "next": "^12.3.3",
+    "next-api-decorators": "^2.0.0",
     "next-auth": "latest",
     "next-connect": "^0.13.0",
+    "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-table": "^7.8.0",
