--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
     "moduleResolution": "nodenext",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "jsx": "preserve",
     "plugins": [
       {
