--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@prisma/client": "^4.5.0",
     "@tanstack/react-query": "^4.12.0",
     "@tanstack/react-query-devtools": "^4.13.0",
-    "date-fns": "^2.29.3",
     "formidable": "^2.0.1",
     "framer-motion": "^7.6.1",
     "jalali-moment": "^3.3.11",
@@ -31,6 +30,7 @@
     "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.1",
     "react-table": "^7.8.0",
     "sass": "^1.56.0",
     "smooth-scrollbar": "^8.8.1",
