--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.1",
+    "react-multi-date-picker": "^3.3.4",
     "react-table": "^7.8.0",
     "sass": "^1.56.0",
     "smooth-scrollbar": "^8.8.1",
