--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formidable": "^2.0.1",
     "framer-motion": "^7.6.1",
     "jalali-moment": "^3.3.11",
+    "mapir-react-component": "^2.0.7",
     "match-sorter": "^6.3.1",
     "micro-cors": "^0.1.1",
     "mime": "^3.0.0",
