--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@prisma/client": "^4.5.0",
     "@tanstack/react-query": "^4.12.0",
     "@tanstack/react-query-devtools": "^4.13.0",
+    "@trpc/client": "^10.7.0",
+    "@trpc/next": "^10.7.0",
+    "@trpc/react-query": "^10.7.0",
+    "@trpc/server": "^10.7.0",
     "formidable": "^2.0.1",
     "framer-motion": "^7.6.1",
     "jalali-moment": "^3.3.11",
-    "mapir-react-component": "^2.0.7",
     "match-sorter": "^6.3.1",
     "micro-cors": "^0.1.1",
     "mime": "^3.0.0",
@@ -36,7 +39,9 @@
     "react-table": "^7.8.0",
     "sass": "^1.56.0",
     "smooth-scrollbar": "^8.8.1",
-    "tailwindcss-container-query": "^1.1.0"
+    "superjson": "^1.12.1",
+    "tailwindcss-container-query": "^1.1.0",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
