--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "next-connect": "^0.13.0",
     "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.1",
     "react-multi-date-picker": "^3.3.4",
     "react-table": "^7.8.0",
+    "react-to-print": "^2.14.11",
     "sass": "^1.56.0",
     "smooth-scrollbar": "^8.8.1",
     "superjson": "^1.12.1",
