--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "smooth-scrollbar": "^8.8.1",
     "superjson": "^1.12.1",
     "tailwindcss-container-query": "^1.1.0",
+    "zarinpal-checkout": "^0.2.7",
     "zod": "^3.20.2"
   },
   "devDependencies": {
