--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "^12.3.3",
     "next-api-decorators": "^2.0.0",
-    "next-auth": "latest",
+    "next-auth": "4.19.0",
     "next-connect": "^0.13.0",
     "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
@@ -56,7 +56,7 @@
     "eslint-config-next": "^13.0.0",
     "postcss": "^8.4.21",
     "prettier": "2.7.1",
-    "prisma": "^4.5.0",
+    "prisma": "^4.9.0",
     "tailwind-scrollbar": "^2.1.0-preview.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.8.4"
