--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "eslint": "7.30.0",
     "eslint-config-next": "^13.0.0",
     "postcss": "^8.4.21",
-    "prettier": "2.7.1",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "prisma": "^4.9.0",
     "tailwind-scrollbar": "^2.1.0-preview.0",
     "tailwindcss": "^3.2.4",
